# occ-paper

./: .gitignore
mmdet3d/configs/_base_/: default_runtime.py
mmdet3d/evaluation/functional/kitti_utils/: eval.py
mmdet3d/models/losses/: lovasz_loss.py
mmdet3d/models/voxel_encoders/: pillar_encoder.py
projects/CENet/cenet/: transforms_3d.py
projects/CENet/configs/: cenet-64x2048_4xb4_Rellis3D.py  cenet_512_pretrain.py
projects/Occ/configs/: Occ512.py  cenet-64x512.py
projects/Occ/configs/base/: lr.py  net.py  semankitti.py  share_paramenter.py
projects/Occ/plugin/: __init__.py
projects/Occ/plugin/datasets/: semantickitti_dataset.py  transforms_3d.py
projects/Occ/plugin/evaluation/: ssc_metric.py
projects/Occ/plugin/model/: bev_backbone.py  cenet_backbone.py  neck.py  range_image_head.py  range_image_segmentor.py  sc_head.py  sparse_backbone.py  (+3 more)
projects/fssc/config/: fssc.py
projects/minkunet/config/: minkunet_pretrain.py
projects/minkunet/minkunet/: loading.py
projects/occ_paper/: test.py
projects/occ_paper/configs/: cenet.py  cosine.py  rvnet.py  sc-lidar.py  sc.py  semankitti.py  share_paramenter.py  ssc.py
projects/occ_paper/occ_paper/: data_preprocessor.py  formating.py  loading.py  rvnet.py  rvnet_backbone.py  sc_segmentor.py  semantickitti_dataset.py  ssc_metric.py  test.py  transforms_3d.py
projects/occ_paper/utils/semankitti/mapping/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
projects/occ_paper_old/configs/: sc.py
projects/sc/configs/: sc.py
projects/sc/plugin/: __init__.py
tools/: dist_train.sh
(+88 files in other folders)
